compiled/webapp/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
  labels:
    app: mywebapp
  namespace: mywebapp
spec:
  replicas: 10
  selector:
    matchLabels:
      app: mywebapp
  template:
    metadata:
      labels:
        app: mywebapp
    spec:
      containers:
        - name: mywebapp
          image: 'myorg/myappimage:latest'
          ports:
            - containerPort: 8080
