compiled/webapp/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
  namespace: mywebapp
spec:
  selector:
    app: mywebapp
  ports:
    - port: 8080
      targetPort: 8080
