compiled/webapp/20-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp
  namespace: mywebapp
spec:
  selector:
    app: mywebapp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
