compiled/webapp/20-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mywebapp
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
  namespace: mywebapp
spec:
  rules:
    - host: webapp.example.com
      http:
        paths:
          - backend:
              serviceName: mywebapp
              servicePort: 8080
  tls:
    - hosts:
        - webapp.example.com
      secretName: mywebapp-tls
